adding cv pdfs as resources

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,8 @@
 project:
   type: website
   output-dir: docs
+  resources: 
+    - "*.pdf"
 
 website:
   description: "Research on the cognitive neuroscience of memory."
