--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   output-dir: docs
   resources: 
     - "*.pdf"
+    - "CNAME"
 
 website:
   description: "Research on the cognitive neuroscience of memory."
