--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ website:
   page-footer: 
     background: light
     left: >-
-      &#169; 2025 Memory Modulation Lab &#8729; Made with [Quarto](https://quarto.org)
+      &#169; 2025 MemoLab &#8729; Made with [Quarto](https://quarto.org)
     right: >-
       <a href="mailto:thememolab@bc.edu" title="email"><i class="bi bi-envelope"></i></a> &#8729; [Participate](/pages/participate) &#8729; [Join](/pages/joinus)
 
